# siexan

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  verify_priority.py
.github/workflows/: docker-image.yml
backend/: config.json  fix_rules.py  generate_example.py  migrate_labels.py  migrate_transfers.py  pyproject.toml  test.sh  test_categorizer.py  test_db_access.py  update_api_rules.py
backend/app/: categorization.py  config.py  database.py  main.py  models.py  schemas.py  seed.py  utils.py
backend/app/services/: categorizer.py
backend/tests/: conftest.py
example_data/: multi_account_trx.csv
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: EditRuleModal.jsx  FileExplorer.jsx  ImportModal.jsx  Notification.jsx  QuickCategorizeModal.jsx
frontend/src/pages/: AccountManagement.jsx  CategorizationRules.jsx  Dashboard.jsx  DatabaseSettings.jsx  MapperManagement.jsx  Rules.jsx  Transactions.jsx
